# ParseDF

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  pull-request.md  refatoring.md
.github/workflows/: code-quality.yml
tests/: test_main.py
